2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Add a new example.

	* src/util/Makefile.am,
	* src/util/component_precise_outline.cc: New.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Add binaries for ICDAR 2011 contests.

	* scribo/toolchain/internal/content_in_hdoc_functor.hh: Remove
	debug.

	* src/content_in_hdoc.cc: Disable debug.

	* src/contest/DAE-2011/Makefile.am,
	* src/contest/Makefile.am,
	* src/contest/hdlac-2011/Makefile.am: New targets.

	* src/contest/DAE-2011/content_in_hdoc_dae.cc,
	* src/contest/hdlac-2011/content_in_hdoc_hdlac.cc: New.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes.

	* scribo/io/xml/internal/page_xml_visitor.hh: Fix duplicate ids.

	* scribo/toolchain/internal/content_in_hdoc_functor.hh: Remove
	debug and disable OCR.

	* scribo/util/component_precise_outline.hh: Remove debug.

2011-06-01  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix use of uninitialized values.

	* scribo/primitive/extract/lines_h_thick_and_thin.hh,
	* scribo/primitive/remove/separators.hh: Initialize border.

2011-06-01  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix a serious memory leak.

	* scribo/core/component_info.hh,
	* scribo/core/component_set.hh,
	* scribo/core/line_info.hh,
	* scribo/draw/line_components.hh: Remove holder data. Prevented
	the containers from being freed.

	* scribo/io/img/internal/debug_img_visitor.hh,
	* scribo/io/img/internal/full_img_visitor.hh,
	* scribo/io/img/save.hh,
	* scribo/io/xml/internal/page_xml_visitor.hh,
	* scribo/io/xml/save.hh,
	* scribo/primitive/extract/lines_h_thick_and_thin.hh,
	* scribo/primitive/remove/separators.hh,
	* scribo/text/merging.hh,
	* scribo/text/paragraphs.hh,
	* scribo/text/paragraphs_closing.hh,
	* scribo/toolchain/internal/content_in_hdoc_functor.hh: Update
	code in order to make holder data useless.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>

	* scribo/text/paragraphs_closing.hh: Revamp code.

2011-06-07  Guillaume Lazzara  <z@lrde.epita.fr>
